Fixed spacing issue on all pages except login / reg; content on page now centered in container with top margin added

--- a/recruitmentapp/src/App.css
+++ b/recruitmentapp/src/App.css
@@ -73,11 +73,11 @@
   width: 100%;
 }
 
-/* temporary style to ensure navbar stays on left stretching top to bottom, content flexed to right */
+/* This flexes the navbar and the content on the page side by side */
 .navAndContent {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  text-align: center;
 }
 
 .content{
@@ -96,4 +96,8 @@
 #companyButton, #labourerButton{
   width: 49%;
   margin-bottom: 10px;
+}
+
+.page-content {
+  margin: 4rem auto;
 }
